--- a/index.html
+++ b/index.html
@@ -5,43 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,700;1,6..12,700&family=Sen:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="banner"></div>
-    <div class="item_1">
-        <h1>Design what you love</h1>
-    </div>
-    <div class="item_2">
-        <img src="storage/img/logo.png">
-    </div>
-    <div class="item_3">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ipsam doloremque saepe mollitia ad architecto perferendis placeat numquam quod! Culpa repudiandae dolore maxime, unde autem nesciunt libero error sunt dolor!
-        </p>
-    </div>
-    <div class="item_4">
-        <button>Contact Us</button>
-    </div>
-    <div class="item_5">
-        <div class="card">
-            <img src="storage/img/Icons.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi fugiat aliquid maxime modi laudantium, necessitatibus ipsam adipisci fugit fuga explicabo architecto porro aut tempore facilis impedit possimus nam, praesentium rerum.</p>
+    <article class="caja">
+        <div class="banner">
+            <img src="storage/img/hero Image.png" alt="">
         </div>
-    </div>
-    <div class="item_6">
-        <div class="card">
-            <img src="storage/img/Icons1.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi fugiat aliquid maxime modi laudantium, necessitatibus ipsam adipisci fugit fuga explicabo architecto porro aut tempore facilis impedit possimus nam, praesentium rerum.</p>
+        <div class="main__texto">
+            <div class="titulo">
+                <h1>Just that simple</h1>
+            </div>
+            <div  class="parrafo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget.</p>
+                <div class="boton">
+                    <button>Get started</button>
+                </div>
+                
+            </div>
         </div>
-    </div>
-    <div class="item_7">
-        <div class="card">
-            <img src="storage/img/Icons2.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi fugiat aliquid maxime modi laudantium, necessitatibus ipsam adipisci fugit fuga explicabo architecto porro aut tempore facilis impedit possimus nam, praesentium rerum.</p>
-        </div>
-    </div>
+    </article>
 </body>
 </html>
