feat: :sparkles: LandingPage N46 (nueva cuenta)
LandingPage N46 de la nueva cuenta de github

--- a/index.html
+++ b/index.html
@@ -7,41 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="banner"></div>
-    <div class="item_1">
-        <h1>Design what you love</h1>
+    <div class="banner">
+        <img src="storage/img/emile-seguin-R9OueKOtGGU-unsplash 1.png" alt="">
     </div>
-    <div class="item_2">
-        <img src="storage/img/logo.png">
-    </div>
-    <div class="item_3">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ipsam doloremque saepe mollitia ad architecto perferendis placeat numquam quod! Culpa repudiandae dolore maxime, unde autem nesciunt libero error sunt dolor!
-        </p>
-    </div>
-    <div class="item_4">
-        <button>Contact Us</button>
-    </div>
-    <div class="item_5">
-        <div class="card">
-            <img src="storage/img/Icons.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi fugiat aliquid maxime modi laudantium, necessitatibus ipsam adipisci fugit fuga explicabo architecto porro aut tempore facilis impedit possimus nam, praesentium rerum.</p>
+    <article class="main">
+        <div class="titulo">
+            <h1>Walk through the world with us</h1>
         </div>
-    </div>
-    <div class="item_6">
-        <div class="card">
-            <img src="storage/img/Icons1.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi fugiat aliquid maxime modi laudantium, necessitatibus ipsam adipisci fugit fuga explicabo architecto porro aut tempore facilis impedit possimus nam, praesentium rerum.</p>
+        <div class="texto">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum. Quam vel aliquam sit vulputate. Faucibus nec gravida ipsum pulvinar vel.</p>
+            <button class="boton">Get started</button>
         </div>
-    </div>
-    <div class="item_7">
-        <div class="card">
-            <img src="storage/img/Icons2.png">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi fugiat aliquid maxime modi laudantium, necessitatibus ipsam adipisci fugit fuga explicabo architecto porro aut tempore facilis impedit possimus nam, praesentium rerum.</p>
-        </div>
-    </div>
+    </article>
 </body>
 </html>
